fixed skills in resume so in dark mode its like the navigation bar hover color

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ nav li a:hover {
     margin: 0.5em 0 1em;
  }
  .skills-category li {
-    background: oklch(92.101% 0.02856 202.299);
+    background: color-mix(in oklch, var(--color-accent), canvas 85%);;
     padding: 0.3em 0.6em;
     border-radius: 0.25em;
     font-size: 0.95em;
